feat: menu, food, and restaurant additional functionalities